@@ -21,11 +21,11 @@ void h()
   f('h');
   f(1);         // { dg-error "ambiguous" }
   // { dg-message "candidate" "candidate note" { target *-*-* } 22 }
-  void f(int);  // { dg-error "previous using declaration" }
+  void f(int);  // { dg-error "previous declaration" }
 }
 
 void m()
 {
   void f(int);
-  using B::f;   // { dg-error "already declared" }
+  using B::f;   // { dg-error "previous declaration" }
 }
